# RenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
App/: CMakeLists.txt
App/Src/: main.cpp
Assets/Materials/: CoverageDebugMaterial.xml  GridMaterial.xml  PBRSolidMat.xml  SkyboxMaterial.xml  TestMaterial.xml  TransparentMaterial.xml
Assets/Models/: sphere.fbx
Assets/RenderInfos/: RenderInfo.xml
Assets/Scenes/: TestScene.xml  TestScene2.xml
Assets/Shaders/DX11/Pixel/: PixelShader.cso  PixelShader.hlsl
Assets/Shaders/DX11/Vertex/: VertexShader.cso  VertexShader.hlsl
Assets/Shaders/Geometry/: EnvMapGeometry.gs
Assets/Shaders/Pixel/: CoverageDebugPixel.ps  CubemapConvolutionPixel.ps  EnvMapPixel.ps  GBuffPixel.cso  GBuffPixel.hlsl  GBuffPixel.ps  GBuffPixel.spv  GridPixel.cso  GridPixel.hlsl  GridPixel.ps  GridPixel.spv  GridSolidPixel.cso  GridSolidPixel.hlsl  GridSolidPixel.ps  GridSolidPixel.spv  PBRPixel.ps  PBRSolidPixel.ps  PixelShader.cso  PixelShader.glsl  PixelShader.hlsl  PixelShader.ps  PixelShader.spv  SkyboxPixelShader.ps  SolidPixel.cso  SolidPixel.hlsl  SolidPixel.ps  SolidPixel.spv  SpecularPrefilterPixel.ps
Assets/Shaders/Pixel/DX11/: GBuffPixel.cso  GBuffPixel.hslsl  GridPixel.cso  GridPixel.hslsl  GridSolidPixel.cso  GridSolidPixel.hslsl  PBRPixel.cso  PBRSolidPixel.cso  PixelShader.cso  PixelShader.hslsl  SkyboxPixelShader.cso  SolidPixel.cso  SolidPixel.hslsl
Assets/Shaders/Pixel/VK/: GBuffPixel.glsl  GBuffPixel.spv  GridPixel.glsl  GridPixel.spv  GridSolidPixel.glsl  GridSolidPixel.spv  PBRPixel.spv  PixelShader.glsl  PixelShader.spv  SkyboxPixelShader.spv  SolidPixel.glsl  SolidPixel.spv
Assets/Shaders/Vertex/: EnvMapVertex.vs  SkyboxVertexShader.vs  VertexShader.cso  VertexShader.glsl  VertexShader.hlsl  VertexShader.spv  VertexShader.vs
Assets/Shaders/Vertex/DX11/: VertexShader.cso  (+2 more)
Editor/: CMakeLists.txt  SceneEditor.cpp  SceneEditor.h  main.cpp
Engine/: CMakeLists.txt
Engine/3rd/dxerr/: dxerr.cpp
Engine/3rd/rapidxml/: rapidxml_ext.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
Engine/Include/: core.h
Engine/Include/Components/: CameraComponent.h  DirLightComponent.h  ModelComponent.h
Engine/Include/Core/: BaseObject.h  Component.h  ComponentDesc.h  Engine.h  Entity.h  Exception.h  GlobalMacros.h  ImageManager.h  InputManager.h  PooledObject.h  Scene.h  SceneDesc.h  SceneLoading.h  Singleton.h  Timer.h  TypedContiguousPool.h  TypedPool.h  Window.h  WindowManager.h
Engine/Include/File/: File.h  FileUtils.h  InFile.h
Engine/Include/Graphics/: BlendEnums.h  CBufferDataTypes.h  Camera.h  ConstantBuffer.h  ConstantBufferTypes.h  CullMode.h  DepthCompareOp.h  DirLight.h  GeometryRenderStep.h  ImageFormat.h  Job.h  Material.h  MaterialInstance.h  MaterialLibrary.h  Mesh.h  PODTypes.h  Pass.h  PipelineStage.h  ReflectedConstantBuffer.h  RenderKey.h  RenderPipeline.h  RenderPipelineConfig.h  RenderStateInfo.h  RenderStep.h  RenderTarget.h  Renderer.h  Resource.h  ResourceBindInfo.h  ResourceFrequency.h  SamplerConfig.h  Texture2D.h  TextureSubResource.h  TextureUsage.h  Vertex.h  Window.h
Engine/Include/Graphics/API/: GraphicsAPI.h
Engine/Include/Graphics/API/DX11/: APICamera.h  APIConstantBuffer.h  APIInternal.h  APIMesh.h  APIRenderState.h  APIRenderTarget.h  APITexture.h  APIWindow.h  DX11API.h  DX11BindSlotOffset.h  DX11Data.h  DX11Exception.h  DX11Macros.h  DX11Pools.h  RenderTargetBuilder.h
Engine/Include/Graphics/API/Vulkan/: APICamera.h  APIConstantBuffer.h  APIInternal.h  APIMesh.h  APIRenderState.h  APIRenderSubState.h  APIRenderTarget.h  APITexture.h  APIWindow.h  DescriptorUtils.h  RenderTargetBuilder.h  VulkanAPI.h  VulkanData.h  VulkanException.h  VulkanMacros.h  VulkanPools.h  VulkanShaderReflection.h
Engine/Include/Math/: Transform.h  Utils.h  Vec3.h  Vector2.h  Vector3.h
Engine/Include/Memory/: Factory.h  GenericPool.h  PoolObjectDeleter.h  PooledObject.h  PtrTypes.h  TemplateFactory.h  TypedContiguousPool.h  TypedFactory.h  TypedPool.h
Engine/Include/Reflection/: CopyTypeVisitor.h  DeserializationTypeVisitor.h  ImGuiTypeVisitor.h  ReflectionHelper.h  ReflectionImplMacros.h  ReflectionMacros.h  ReflectionPrimitives.h  SerializationTypeVisitor.h  TypeDescriptors.h  TypeVisitor.h  UnloadTypeVisitor.h
Engine/Include/Util/: KeyboardUtil.h  ModelLoader.h  WideStringUtil.h
Engine/Src/: core.cpp
Engine/Src/Components/: CameraComponent.cpp  DirLightComponent.cpp  ModelComponent.cpp
Engine/Src/Core/: Component.cpp  ComponentDesc.cpp  Engine.cpp  Entity.cpp  Exception.cpp  GenericPool.cpp  ImageManager.cpp  InputManager.cpp  PooledObject.cpp  Scene.cpp  SceneDesc.cpp  SceneLoading.cpp  Singleton.cpp  Timer.cpp  Window.cpp  WindowManager.cpp
Engine/Src/File/: File.cpp  FileUtils.cpp  InFile.cpp
Engine/Src/Graphics/: BlendEnums.cpp  Camera.cpp  ConstantBuffer.cpp  ConstantBufferTypes.cpp  CullMode.cpp  DepthCompareOp.cpp  GeometryRenderStep.cpp  ImageFormat.cpp  Job.cpp  Material.cpp  MaterialInstance.cpp  MaterialLibrary.cpp  Mesh.cpp  Pass.cpp  ReflectedConstantBuffer.cpp  RenderPipeline.cpp  RenderPipelineConfig.cpp  RenderStateInfo.cpp  RenderStep.cpp  RenderTarget.cpp  Renderer.cpp  Texture2D.cpp  Window.cpp
Engine/Src/Graphics/API/: GraphicsAPI.cpp
Engine/Src/Graphics/API/DX11/: APIInternal.cpp  DX11API.cpp  DX11Exception.cpp  DX11Pools.cpp  RenderTargetBuilder.cpp
Engine/Src/Graphics/API/Vulkan/: APIInternal.cpp  DescriptorUtils.cpp  RenderTargetBuilder.cpp  VulkanAPI.cpp  VulkanException.cpp  VulkanPools.cpp  VulkanShaderReflection.cpp
Engine/Src/Math/: Transform.cpp  Vec3.cpp
Engine/Src/Memory/: GenericPool.cpp
Engine/Src/Reflection/: CopyTypeVisitor.cpp  DeserializationTypeVisitor.cpp  ImGuiTypeVisitor.cpp  ReflectionHelper.cpp  ReflectionPrimitives.cpp  ReflectionSettings.cpp  SerializationTypeVisitor.cpp  TypeDescriptors.cpp  UnloadTypeVisitor.cpp
Engine/Src/Util/: KeyboardUtil.cpp  ModelLoader.cpp
Tools/ShaderCompiler/: ShaderCompiler.py
Tools/ShaderCompiler/ShaderInclude/: Lighting.hlsli  PBR.hlsli
imgui/: imgui.cpp
(+46 files in other folders)
